# hackathon

./: .env  .env.production  .gitignore  Dockerfile  README.md  debug_test.py  deploy.py  hackrx.db  main.py  pyproject.toml  render.yaml  requirements.txt  test_new_endpoint.json  test_vague_query.json  vercel.json
